# voice_chat2

./: .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
skufy_client/: CMakeLists.txt  config.json
skufy_client/src/: main_webrtc.cpp
skufy_server/: CMakeLists.txt  Dockerfile  config.json
skufy_server/src/: main_webrtc.cpp
